--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,46 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 90%;
+  max-width: 400px;
+  height: 500px;
+  margin: 0 auto;
   color: white;
+  text-align: center;
+  font-size: 20px;
+  background-color: hsl(218, 23%, 16%);
+  font-family: monospace;
+  padding-top: 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.data-div {
+  width: 90%;
+  height: 250px;
+  max-width: 250px;
+  margin: 0 auto;
+  padding: 5px;
+  background-color: hsl(217, 19%, 24%);
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dice {
+  margin: 0 auto;
+  margin-top: -15px;
+  display: inline-block;
+  background-color: hsl(150, 100%, 66%);
+  padding: 10px 10px;
+  height: 30px;
+  width: 6%;
+  border-radius: 100%;
+}
+
+.dice:hover {
+  box-shadow: 6px 5px 20px hsl(150, 100%, 66%);
+  cursor: pointer;
+}
+
+.data-div span {
+  color: hsl(150, 100%, 66%);
+}
+
+.divide {
+  width: 90%;
 }
